# appstream-glib

./: Makefile.am  config.h.in  configure.ac  meson.build  meson_options.txt
client/: Makefile.am  as-builder.c  as-compose.c  meson.build
contrib/: Makefile.am
data/: meson.build
debian/: appstream-builder.install  appstream-glib-doc.install  appstream-util.install  changelog  control  copyright  gir1.2-appstreamglib-1.0.install  libappstream-builder-dev.install  libappstream-builder8.install  libappstream-glib-dev.install  libappstream-glib8.install  libappstream-glib8.symbols  rules  watch
debian/patches/: 01_yaml-icon-spec-compliant.patch  series
libappstream-builder/: Makefile.am  meson.build
libappstream-builder/plugins/: asb-plugin-firmware.c  meson.build
libappstream-glib/: Makefile.am  appstream-glib.pc.in  as-app-inf.c  as-app.c  as-release.c  as-screenshot.c  as-self-test.c  as-store-cab.c  as-store-cab.h  as-store.c  as-store.h  as-utils.c  as-utils.h  meson.build
